force-app/main/default/objects/Service_Request__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order1</fullName>
            </value>
            <value>
                <fullName>Order2</fullName>
            </value>
            <value>
                <fullName>Consult1</fullName>
            </value>
            <value>
                <fullName>Colsultt2</fullName>
            </value>
            <value>
                <fullName>Solicitude1</fullName>
            </value>
            <value>
                <fullName>Solicitude2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>