force-app/main/default/objects/Service_Request__c/fields/Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Date__c</fullName>
    <defaultValue>Today()+5</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Commit Date</label>
    <type>Date</type>
</CustomField>