force-app/main/default/objects/Service_Request__c/fields/Contingency__c.field-meta.xml
<CustomField>
    <fullName>Contingency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contingency</label>
    <referenceTo>Contingency__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>