force-app/main/default/objects/Service_Request__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Created</label>
    <type>Date</type>
</CustomField>