force-app/main/default/objects/Service_Request__c/fields/Favourite_Park__c.field-meta.xml
<CustomField>
    <fullName>Favourite_Park__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Favourite Park</label>
    <type>TextArea</type>
</CustomField>