force-app/main/default/objects/Service_Request__c/fields/for_delete_c__c.field-meta.xml
<CustomField>
    <fullName>for_delete_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Delete</label>
    <type>Checkbox</type>
</CustomField>