force-app/main/default/objects/Service_Request__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <label>Integration Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>