force-app/main/default/objects/Service_Request__c/fields/MSISDN__c.field-meta.xml
<CustomField>
    <fullName>MSISDN__c</fullName>
    <label>MSISDN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>