force-app/main/default/objects/Service_Request__c/fields/Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Sub_Area__c</fullName>
    <label>Sub Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SubOrder11</fullName>
            </value>
            <value>
                <fullName>SubOrder12</fullName>
            </value>
            <value>
                <fullName>SubOrder21</fullName>
            </value>
            <value>
                <fullName>SubOrder22</fullName>
            </value>
            <value>
                <fullName>SubConsult11</fullName>
            </value>
            <value>
                <fullName>SubConsult12</fullName>
            </value>
            <value>
                <fullName>SubConsult21</fullName>
            </value>
            <value>
                <fullName>SubConsult22</fullName>
            </value>
            <value>
                <fullName>SubSolicitude11</fullName>
            </value>
            <value>
                <fullName>SubSolicitude12</fullName>
            </value>
            <value>
                <fullName>SubSolicitude21</fullName>
            </value>
            <value>
                <fullName>SubSolicitude22</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>