force-app/main/default/objects/Service_Request__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Created</fullName>
            </value>
            <value>
                <fullName>Document Sent</fullName>
            </value>
            <value>
                <fullName>Validation Bio Failed</fullName>
            </value>
            <value>
                <fullName>Validation Bio Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>