force-app/main/default/objects/Service_Request__c/recordTypes/SR_Close.recordType-meta.xml
<RecordType>
    <fullName>SR_Close</fullName>
    <active>true</active>
    <label>SR Close</label>
</RecordType>