force-app/main/default/objects/Service_Request__c/validationRules/Activity_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Activity_Check</fullName>
    <active>false</active>
    <errorConditionFormula>$ObjectType.Action__c.Fields.Status__c  &lt;&gt; &apos;Closed&apos;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please close all the activities!</errorMessage>
</ValidationRule>